phantom-frontend/src/index.css
@import "tailwindcss";
html, body, #root {
  margin: 0;
  padding: 0;
  min-height: 100vh;
  width: 100%;
  font-family: "General Sans", ui-sans-serif, system-ui, sans-serif;
}

/* Override ugly white background on chrome autofill in dark mode */
input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus, 
input:-webkit-autofill:active{
    -webkit-box-shadow: 0 0 0 30px #0F172A inset !important;
    -webkit-text-fill-color: #E2E8F0 !important;
    transition: background-color 5000s ease-in-out 0s;
}

